--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -2,42 +2,111 @@ body{
     background-image: url(../images/fondoInicial.png);
     background-color: black;
 }
-
+/** Rectangulo Principal **/
 .Welcome{
     margin: auto;
-    margin-top: 35vh;
-    height: 500px;
-    width: 850px;
+    position: absolute;
+    height: 30rem;
+    width: 40rem;
     background-color: white;
     border-radius: 5vh;
+    display: flex;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    flex-direction: column;
+    animation: Welcome 2s 1;
+    opacity: 1;
+    overflow: hidden;
 }
 
+/** Animacion de Opacidad **/
+ /* @keyframes Welcome {
+    0%{
+        opacity: 1;
+    }
+
+    15%{opacity: 1;
+    }
+    40%{
+        opacity: 1;
+    }
+    80%{
+        opacity: 1;
+    }
+    90%{opacity: 0;}
+}  */
+/** Logo **/
 .kario{
-    margin: auto;
-    margin-left: 44%;
-    margin-top: 34px;
+    margin-top: auto;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
 }
-
+/** Primeras palabras **/
 .WelcomeAgain{
-    font-size: 2vi;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(1.6rem, 2rem, 5rem);
+    font-family: Arial, Helvetica, sans-serif;;
 }
-
+/** Pedrito **/
 .Pedrito{
-    margin-top: -20px;
-    margin-left: 44%;
+    margin-right:auto ;
+    margin-left: auto;
+    display: block;
 }
-
+/**Nombre**/
 .Nombre{
-    margin-top: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    margin-top: 1rem;
     text-align: center;
-    font-size: 2vi;
+    display: flex;
+    font-size: clamp(1.4rem, 2rem, 5rem);
     font-family: Arial, Helvetica, sans-serif;
 }
-
+/**La ultimas palabras**/
 .Usuario{
+    font-size: clamp(16px, 12px, 26px);
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
     text-align: center;
     margin-top: -20px;
     font-family:Arial, Helvetica, sans-serif;
+}
+/**Imagen atras del Welcome**/
+.kario_sin_kario{
+    width: 14rem;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+}
+
+@media screen and (max-width:600px){
+    .Welcome{
+        width: 21rem;
+        height: 45rem;
+        border: 3px solid rgb(255, 114, 27);
+        gap: 10%;
+        
+    }
+    .WelcomeAgain{
+        font-size: 1rem;
+    }
+    .Pedrito{
+        height: 12rem;
+        width: 12rem;
+    }
+
+    .Nombre{
+        font-size: 17px;
+    }
 }
