--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,6 +16,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
@@ -23,16 +24,75 @@ body{
     width: 45vw;
     height: 37vw;
     padding: 1rem;
+    opacity: 0;
+    animation: login 3.5s 1;
+    opacity: 1;
+    overflow: hidden;
 }
 
 .login input{
     border-radius: 1.2rem;
-    width:70%;
+    width:100%;
     height: 3rem;
     border: solid 0.5px;
     font-size: 1rem;
 }
 
-.logo{
-    width: 20%;
+.formulario{
+    width:70%;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    text-align: left;
 }
+
+label{
+    display: flex;
+    align-items: left;
+}
+
+
+
+
+
+.logo{
+    width: 7rem;
+
+}
+
+.logo-tr{
+    width: 14rem;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    animation: logo 2s 1;
+}
+
+/* @keyframes logo {
+    0% {
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
+@keyframes login {
+    0% {
+        opacity: 0;
+    }
+    50%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+} */
