--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -1,3 +1,4 @@
+
 body{
     background-image: url(../images/fondoInicial.png);
     background-color: black;
@@ -7,21 +8,22 @@ body{
     margin: auto;
     position: absolute;
     height: 30rem;
-    width: 40rem;
+    width: 45rem;
     background-color: white;
     border-radius: 5vh;
     display: flex;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    opacity: 1;
     flex-direction: column;
     animation: Welcome 2s 1;
-    opacity: 1;
+    opacity: 0;
     overflow: hidden;
 }
 
 /** Animacion de Opacidad **/
- /* @keyframes Welcome {
+  @keyframes Welcome {
     0%{
         opacity: 1;
     }
@@ -35,7 +37,7 @@ body{
         opacity: 1;
     }
     90%{opacity: 0;}
-}  */
+}  
 /** Logo **/
 .kario{
     margin-top: auto;
@@ -45,36 +47,32 @@ body{
 }
 /** Primeras palabras **/
 .WelcomeAgain{
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
-    justify-content: center;
     font-size: clamp(1.6rem, 2rem, 5rem);
     font-family: Arial, Helvetica, sans-serif;;
 }
 /** Pedrito **/
 .Pedrito{
-    margin-right:auto ;
     margin-left: auto;
-    display: block;
+    margin-right: auto;
 }
 /**Nombre**/
 .Nombre{
-    margin-right: auto;
     margin-left: auto;
-    display: flex;
-    margin-top: 1rem;
-    text-align: center;
+    margin-right: auto;
     display: flex;
     font-size: clamp(1.4rem, 2rem, 5rem);
     font-family: Arial, Helvetica, sans-serif;
 }
 /**La ultimas palabras**/
 .Usuario{
-    font-size: clamp(16px, 12px, 26px);
+    margin-bottom: 3rem;
+    font-size: 1rem;
     margin-right: auto;
     margin-left: auto;
     display: flex;
-    text-align: center;
-    margin-top: -20px;
     font-family:Arial, Helvetica, sans-serif;
 }
 /**Imagen atras del Welcome**/
@@ -90,13 +88,16 @@ body{
     z-index: -1;
 }
 
-@media screen and (max-width:600px){
+@media screen and (max-width:650px){
+    .kario{
+        margin-top: -4.5rem;
+        padding: 30%;
+    }
+
     .Welcome{
         width: 21rem;
         height: 45rem;
         border: 3px solid rgb(255, 114, 27);
-        gap: 10%;
-        
     }
     .WelcomeAgain{
         font-size: 1rem;
