--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,14 @@
+.login h1 {
+    font-size: 1.7rem;
+    margin: 0.5rem 0 0.4rem 0;
+    font-weight: lighter;
+}
+.login p {
+    font-size: 0.9rem;
+    margin: 0.4rem 0;
+    color: #686767;
+}
+
 body{
     margin: 0;
     background-color: black;
@@ -20,26 +31,30 @@ body{
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
-    border-radius: 1rem;
-    width: 45vw;
-    height: 37vw;
-    padding: 1rem;
-    opacity: 0;
+    border-radius: 4rem;
+    width: 40vw;
+    height: 31vw;
+    /* height: 480px;
+    min-height: 400px;
+    max-height: 600px; */
+    padding: 2rem 2rem 2rem 2rem;
     animation: login 3.5s 1;
     opacity: 1;
     overflow: hidden;
 }
 
+
 .login input{
-    border-radius: 1.2rem;
+    border-radius: 1rem;
     width:100%;
-    height: 3rem;
-    border: solid 0.5px;
-    font-size: 1rem;
+    height: 1.7rem;
+    border: solid 1px #ccc;
+    font-size: 0.95rem;
+    padding-left: 0.7rem;
 }
 
 .formulario{
-    width:70%;
+    width:80%;
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -47,21 +62,41 @@ body{
 }
 
 label{
-    display: flex;
-    align-items: left;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin-left: 0;
+    margin-top: 1rem;
+    margin-bottom: 0.2rem;
+    font-size: 1.1rem;
+    color: #222;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+    background-color: #FF721B;
+    font-size: 1.2rem;
+    padding: 0.5rem 2rem;
+    border-radius: 1.2rem;
+    margin-top: 1.2rem;
+    margin-bottom: 1.2rem;
+    display: inline-block;
 
+}
 
-
+a:hover {
+    background-color: #e05d00;
+}
 
 .logo{
-    width: 7rem;
+    width: 5rem;
 
 }
 
+
 .logo-tr{
-    width: 14rem;
+    width: 9rem;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -72,8 +107,14 @@ label{
     opacity: 0;
     animation: logo 2s 1;
 }
+.problems{
+    font-size: 0.65rem !important;
+    font-weight: lighter;
+    color: #686767;
+}
 
-/* @keyframes logo {
+    
+@keyframes logo {
     0% {
         opacity: 0;
     }
@@ -95,4 +136,4 @@ label{
     100%{
         opacity: 1;
     }
-} */
+}  
