--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -137,3 +137,45 @@ a:hover {
         opacity: 1;
     }
 }  
+
+
+@media screen {
+    
+}
+
+/* Teléfonos pequeños */
+@media screen and (max-width: 480px) {
+  .login {
+    width: 70vw;
+    height: 160vw;
+    padding: 1rem;
+    border-radius: 2rem;
+    border: #FF721B solid 3px;
+  }
+
+  .login h1 {
+    font-size: 1.7rem;
+    margin-bottom: 2rem;
+    font-weight: lighter;
+}
+
+.login p {
+    font-size: 0.9rem;
+    margin-bottom: 2rem;
+}
+
+.formulario{
+    margin-bottom: 2rem;
+}
+
+  .logo {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    width: 7rem;
+  }
+  
+  .logo-tr {
+    width: 8rem;
+  }
+}
+
