--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -1,7 +1,7 @@
 body{
     margin: 0%;
-    background-color:aquamarine;
-    text-align: center;
+    background-color:rgb(255, 255, 255);
+    text-align: center;    
 }
 
 header{
@@ -21,26 +21,31 @@ header{
     flex-direction: row;
     justify-content: center;
     gap: 5px;
-    padding-left: 5vw;
-
+    padding-left: 8.5vw;
 }
 
 .account{
-    margin-right: 1vw;
     margin-top: 1vw;
     margin-bottom: 1vw;
     width: 10vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 .middle{
-    width: 3vw;
-    padding-right: 5vw;
+    width: 2.5vw;
+    padding-left: 1vw;
 }
-
+.report{
+    width: 10vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    padding-left: 10vw;
+}
 .top{
     width: 10vw;
     display: flex;
@@ -54,7 +59,7 @@ header{
 }
 
 .text{
-    font-size: 22px;
+    font-size: 1.2vw;
     justify-items: center center;
     margin: auto;
     margin-left: 0.5vw;
@@ -87,23 +92,27 @@ header{
 
 .header1{
     grid-column-start: 1;
-    margin-left: 0.5vw;
+    margin-left: 2vw;
 }
 .header2{
     grid-column-start: 2;
-    margin-left: 3vw;
+    margin-left: 6vw;
 }
 .header3{
     grid-column-start: 3;
+    margin-left: 3vw;
 }
 .header4{
     grid-column-start: 4;
+    margin-left: 3.5vw;
 }
 .header5{
     grid-column-start: 5;
+    margin-right: -6vw;
 }
 .header6{
     grid-column-start: 6;
+    margin-left: 7vw;
 }
 .header7{
     grid-column-start: 7;
@@ -113,17 +122,15 @@ header{
 }
 .header9{
     grid-column-start: 9;
+    margin-left: 2vw;
+    margin-right: -1vw;
 }
 
 .indicadoruno{
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-evenly;
-    background-color: brown;
     padding-left: 3vw;
-    padding-right: 3vw;
-
-
 }
 .indica1{
     margin: auto;
@@ -131,46 +138,57 @@ header{
     grid-template-columns: auto;
     justify-items: center;
     gap: 6vw;
-    background-color: rgb(255, 255, 255);
     grid-column-start: 1;
-    border: solid black 1px;
-    border-radius: 20px;
+    border: solid rgb(141, 141, 141) 1px;
+    border-radius: 30px;
     height: 3vw;
-    justify-content: space-evenly;
-    padding-left: 2vw;
-    padding-right: 2vw;
     font-size: 1.2vw;
     height: 4vw;
+    width: 90vw;
+    color:  rgb(141, 141, 141) 1px;
+    margin-top: 1vw;
 }
 
 .indicador{
     grid-column-start: 1;
+    margin-left: 1vw;
+    width: 12vw;
+    text-align: left;
+    margin-bottom: 1vw;
 }
 .descripcion{
     grid-column-start: 2;
-    
+    width: 12vw;
+    margin-left: -5vw;
+    text-align: left;
 }
 .categoria{
     grid-column-start: 3;
+    margin-left: -5vw;
 }
 .fechaI{
     grid-column-start: 4;
+    margin-left: 1vw;
 }
 .fechaT{
     grid-column-start: 5;
+    margin-left: -1vw;
 }
 .formula{
     grid-column-start: 6;
 }
 .frecuencia{
     grid-column-start: 7;
+    margin-left: -2vw;
 }
 .cumplimiento{
     grid-column-start: 8;
+    margin-left: 1vw;
 }
 .area{
     grid-column-start: 9;
-    
+    margin-left: -1vw;
+    margin-right: 2vw;
 }
 
 #menu1{
@@ -178,10 +196,24 @@ header{
     width: 2vw;
     padding-left: 1vw;
     padding-right: 1vw;
-    background-color: green;
 }
 
 .menu1{
     grid-column-start: 2;
     margin: auto;
+    width: 2vw;
+}
+
+.add_elements{
+    width: 14vw;
+    height: 3.5vw;
+    padding: 1vw;
+    background-color: rgb(246, 88, 30);
+    margin: auto;
+    border-radius: 30px;
+    font-size: 1.2vw;
+    color: white;
+    border: 0px;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
 }
