--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -1,10 +1,10 @@
-body{
+body {
     margin: 0%;
-    background-color:rgb(255, 255, 255);
-    text-align: center;    
+    background-color: rgb(255, 255, 255);
+    text-align: center;
 }
 
-header{
+header {
     display: flex;
     flex-direction: row;
     justify-items: center;
@@ -15,7 +15,11 @@ header{
     font-size: 1.2vw;
 }
 
-.add{
+#menutop {
+    display: none;
+}
+
+.add {
     width: 10vw;
     display: flex;
     flex-direction: row;
@@ -24,7 +28,7 @@ header{
     padding-left: 8.5vw;
 }
 
-.account{
+.account {
     margin-top: 1vw;
     margin-bottom: 1vw;
     width: 10vw;
@@ -34,11 +38,12 @@ header{
     gap: 10px;
 }
 
-.middle{
+.middle {
     width: 2.5vw;
     padding-left: 1vw;
 }
-.report{
+
+.report {
     width: 10vw;
     display: flex;
     flex-direction: row;
@@ -46,7 +51,8 @@ header{
     gap: 5px;
     padding-left: 10vw;
 }
-.top{
+
+.top {
     width: 10vw;
     display: flex;
     flex-direction: row;
@@ -54,33 +60,34 @@ header{
     gap: 5px;
 }
 
-.icons{
+.icons {
     width: 2vw;
 }
 
-.text{
+.text {
     font-size: 1.2vw;
     justify-items: center center;
     margin: auto;
     margin-left: 0.5vw;
 }
 
-.blackicon{
+.blackicon {
     width: 1.2vw;
 }
-.pedro{
+
+.pedro {
     width: 3vw;
 }
 
-.panel{
+.panel {
     font-size: 2vw;
 }
 
-.paneltext{
+.paneltext {
     font-size: 1.5vw;
 }
 
-.headers{
+.headers {
     display: grid;
     grid-template-columns: auto;
     justify-items: center;
@@ -90,49 +97,58 @@ header{
     font-weight: bold;
 }
 
-.header1{
+.header1 {
     grid-column-start: 1;
     margin-left: 2vw;
 }
-.header2{
+
+.header2 {
     grid-column-start: 2;
     margin-left: 6vw;
 }
-.header3{
+
+.header3 {
     grid-column-start: 3;
     margin-left: 3vw;
 }
-.header4{
+
+.header4 {
     grid-column-start: 4;
     margin-left: 3.5vw;
 }
-.header5{
+
+.header5 {
     grid-column-start: 5;
     margin-right: -6vw;
 }
-.header6{
+
+.header6 {
     grid-column-start: 6;
     margin-left: 7vw;
 }
-.header7{
+
+.header7 {
     grid-column-start: 7;
 }
-.header8{
+
+.header8 {
     grid-column-start: 8;
 }
-.header9{
+
+.header9 {
     grid-column-start: 9;
     margin-left: 2vw;
     margin-right: -1vw;
 }
 
-.indicadoruno{
+.indicadoruno {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-evenly;
     padding-left: 3vw;
 }
-.indica1{
+
+.indica1 {
     margin: auto;
     display: grid;
     grid-template-columns: auto;
@@ -145,66 +161,74 @@ header{
     font-size: 1.2vw;
     height: 4vw;
     width: 90vw;
-    color:  rgb(141, 141, 141) 1px;
+    color: rgb(141, 141, 141) 1px;
     margin-top: 1vw;
 }
 
-.indicador{
+.indicador {
     grid-column-start: 1;
     margin-left: 1vw;
     width: 12vw;
     text-align: left;
     margin-bottom: 1vw;
 }
-.descripcion{
+
+.descripcion {
     grid-column-start: 2;
     width: 12vw;
     margin-left: -5vw;
     text-align: left;
 }
-.categoria{
+
+.categoria {
     grid-column-start: 3;
     margin-left: -5vw;
 }
-.fechaI{
+
+.fechaI {
     grid-column-start: 4;
     margin-left: 1vw;
 }
-.fechaT{
+
+.fechaT {
     grid-column-start: 5;
     margin-left: -1vw;
 }
-.formula{
+
+.formula {
     grid-column-start: 6;
 }
-.frecuencia{
+
+.frecuencia {
     grid-column-start: 7;
     margin-left: -2vw;
 }
-.cumplimiento{
+
+.cumplimiento {
     grid-column-start: 8;
     margin-left: 1vw;
 }
-.area{
+
+.area {
     grid-column-start: 9;
     margin-left: -1vw;
     margin-right: 2vw;
 }
 
-#menu1{
+#menu1 {
     margin: auto;
     width: 2vw;
     padding-left: 1vw;
     padding-right: 1vw;
 }
 
-.menu1{
+.menu1 {
     grid-column-start: 2;
     margin: auto;
     width: 2vw;
 }
 
-.add_elements{
+.add_elements {
     width: 14vw;
     height: 3.5vw;
     padding: 1vw;
@@ -214,6 +238,192 @@ header{
     font-size: 1.2vw;
     color: white;
     border: 0px;
-    margin-top: 2vw;
+    margin-top: 2.5vw;
     margin-bottom: 2vw;
+}
+
+
+
+
+
+@media screen and (max-width: 428px) {
+    body {
+        padding: 0;
+        margin: 0;
+        background-color: aquamarine;
+    }
+
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+        gap: 0;
+        font-size: 14px;
+        border-bottom: 1px solid #ccc;
+    }
+
+    #menutop {
+        display: flex;
+    }
+
+    .text {
+        display: none;
+    }
+
+    .add::before{display: none;}
+
+    .top {}
+
+    .middle {}
+
+    .report {}
+
+    .menutop:{
+        position: relative;
+        display: inline-block;
+    }
+
+    .menutop-content {
+        display: none;
+        position: absolute;
+        background: white;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+    }
+
+    .menutop:hover .menutop-content {
+        display: block;
+    }
+
+
+
+
+    .account {
+        width: 3vw;
+        margin: 0;
+        gap: 2vw;
+        justify-content: space-between;
+    }
+
+    .blackicon {
+        width: 2vw;
+        height: 2vw;
+    }
+
+    .pedro {
+        width: 3vw;
+        height: 3vw;
+        border-radius: 50%;
+    }
+
+    .panel {
+        font-size: 4vw;
+        margin: 2vw 0 1vw 0;
+    }
+
+    .paneltext {
+        font-size: 14px;
+        margin: 0 2vw 2vw 2vw;
+    }
+
+    .headers {
+        display: none;
+    }
+
+    .indicadoruno {
+        display: flex;
+        padding: 0 5vw;
+        margin-bottom: 3vw;
+    }
+
+    .indica1 {
+        width: 70vw;
+        height: auto;
+        padding: 20px;
+        border: 2px solid rgb(246, 88, 30);
+        border-radius: 15px;
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        font-size: 14px;
+        text-align: left;
+    }
+
+    .indicador {
+        width: 80vw;
+        margin: 0;
+        padding: 0;
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        gap: 2vw;
+    }
+
+    .cumplimiento {
+        width: 80vw;
+        margin: 0;
+        padding: 0;
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        gap: 2vw;
+    }
+
+    .descripcion {
+        display: none;
+    }
+
+    .categoria {
+        display: none;
+    }
+
+    .fechaI {
+        display: none;
+    }
+
+    .fechaT {
+        display: none;
+    }
+
+    .formula {
+        display: none;
+    }
+
+    .frecuencia {
+        display: none;
+    }
+
+    .area {
+        display: none;
+    }
+
+    .indicador {
+        font-weight: bold;
+        font-size: 3vw;
+        color: #666;
+    }
+
+    .cumplimiento {
+        font-weight: bold;
+        font-size: 3vw;
+        color: #666;
+    }
+
+    #menu1 {
+        display: contents;
+    }
+
+    .menu1 {
+        width: 4vw;
+    }
+
+    .add_elements {
+        width: 40vw;
+        height: 10vw;
+        margin: 2vw;
+        font-size: 3vw;
+        font-weight: bold;
+    }
 }
