--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -15,6 +15,11 @@ header {
     font-size: 1.2vw;
 }
 
+a{
+    display: flex;
+    text-decoration: none;
+    color: black;
+}
 .menutop {
     display: none;
 }
