--- a/src/styles/help.css
+++ b/src/styles/help.css
@@ -97,7 +97,7 @@ a{
     background-color: #f2f2f2;
     margin: auto;
     width: 66vw;
-    height: 25vw;
+    height: 28vw;
     border-radius: 2vw;
     border-width: 2px;
     border-style: solid;
@@ -108,11 +108,10 @@ a{
     background-color: white;
     margin: auto;
     margin-bottom: 2vw;
-    width: 50vw;
-    height: 3vw;
+    width: 55vw;
+    height: 3.5vw;
     align-content: center;
     text-align: left;
-    padding-left: 1vw;
     display: flex;
     flex-direction: row;
     border-radius: 2vw;
@@ -123,4 +122,49 @@ a{
     height: 1vw;
     margin: auto;
     padding-left: 30vw;
+}
+.questions{
+    font-size: 1.5vw;
+    margin: auto;
+}
+
+.secondblock{
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: space-between;
+
+}
+
+.uno{
+    grid-column-start: 1;
+    background-color: #f2f2f2;
+    margin: 5vw;
+    align-items: center center;
+    padding: 3vw;
+    border-radius: 2vw;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #ff7221;
+}
+.dos{
+    grid-column-start: 2;
+    background-color: #f2f2f2;
+    margin: 5vw;
+    align-items: center center;
+    padding: 3vw;
+    border-radius: 2vw;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #ff7221;
+}
+.tres{
+    grid-column-start: 3;
+    background-color: #f2f2f2;
+    margin: 5vw;
+    align-items: center center;
+    padding: 3vw;
+    border-radius: 2vw;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #ff7221;
 }
