--- a/src/styles/report.css
+++ b/src/styles/report.css
@@ -1,4 +1,4 @@
-body{
+body {
     margin: 0;
 }
 
@@ -19,11 +19,12 @@ header {
     font-size: 1.2vw;
 }
 
-a{
+a {
     display: flex;
     text-decoration: none;
     color: black;
 }
+
 .menutop {
     display: none;
 }
@@ -86,7 +87,7 @@ a{
 
 .pedro {
     width: 3vw;
-    background-color:#ff7221;
+    background-color: #ff7221;
     padding: 0.2vw;
     border-radius: 50%;
 }
@@ -98,7 +99,7 @@ a{
 
 
 
-.block{
+.block {
     background-color: #f2f2f2;
     margin: auto;
     width: 75vw;
@@ -112,45 +113,50 @@ a{
     justify-content: space-around;
 }
 
-.item1{
+.item1 {
     grid-column: 1/2;
     text-align: left;
     margin: auto;
 }
-.item2{
+
+.item2 {
     grid-column: 2/3;
     text-align: left;
     margin: auto;
 }
-.item3{
+
+.item3 {
     grid-column: 1/2;
     text-align: left;
     margin: auto;
 }
-.item4{
+
+.item4 {
     grid-column: 2/3;
     text-align: left;
 }
-.item5{
+
+.item5 {
     grid-column: 1/2;
     text-align: left;
     margin: auto;
 }
-.item6{
+
+.item6 {
     grid-column: 2/3;
     text-align: left;
     margin: auto;
 }
 
 
-.titlesR{
+.titlesR {
     font-size: 1.5vw;
     text-align: left;
     margin-left: 3vw;
     margin-top: -1vw;
 }
 
-.titulo{
+.titulo {
     width: 28vw;
     height: 1vw;
     background-color: white;
@@ -169,14 +175,14 @@ a{
     margin-top: -1vw;
 }
 
-.titlesF{
+.titlesF {
     font-size: 1.5vw;
     text-align: left;
     margin-left: -9vw;
     margin-top: -1vw;
 }
 
-.fecha{
+.fecha {
     width: 14vw;
     height: 1vw;
     background-color: white;
@@ -195,14 +201,14 @@ a{
     margin-top: -1vw;
 }
 
-.titlesD{
+.titlesD {
     font-size: 1.5vw;
     text-align: left;
     margin-left: 3vw;
     margin-top: -3vw;
 }
 
-.descri{
+.descri {
     width: 28vw;
     height: 10vw;
     background-color: white;
@@ -220,7 +226,7 @@ a{
     margin-top: -1vw;
 }
 
-.titlesP{
+.titlesP {
     font-size: 1.5vw;
     text-align: left;
     margin-left: -4vw;
@@ -228,7 +234,7 @@ a{
     margin-bottom: 0;
 }
 
-.flechaP{
+.flechaP {
     width: 2vw;
     background-color: white;
     border-radius: 10px;
@@ -245,7 +251,7 @@ a{
 }
 
 
-.titlesA{
+.titlesA {
     font-size: 1.5vw;
     text-align: left;
     margin-left: 3vw;
@@ -253,7 +259,7 @@ a{
     margin-bottom: -1vw;
 }
 
-.arrowLeft{
+.arrowLeft {
     width: 1.5vw;
     background-color: white;
     border-radius: 10px;
@@ -270,14 +276,14 @@ a{
     margin-top: -3vw;
 }
 
-.titlesE{
+.titlesE {
     font-size: 1.5vw;
     text-align: left;
     margin-left: -6vw;
     margin-top: -12vw;
 }
 
-.media{
+.media {
     width: 4vw;
     background-color: white;
     padding-left: 6vw;
@@ -291,16 +297,6 @@ a{
     margin-left: -5vw;
 }
 
-
-
-
-
-
-
-
-
-
-
 .add_elements {
     width: 14vw;
     height: 3.5vw;
@@ -313,4 +309,364 @@ a{
     border: 0px;
     margin-top: 2.5vw;
     margin-bottom: 2vw;
+}
+
+
+/*Version iphone 14 pro max*/
+
+@media screen and (max-width: 480px) {
+    body {
+        padding: 0;
+        margin: 0;
+    }
+
+    .add {
+        display: none;
+    }
+
+    .top {
+        display: none;
+    }
+
+    .middle {
+        display: none;
+    }
+
+    .report {
+        display: none;
+    }
+
+    header {
+        flex-direction: row;
+        align-items: center;
+        padding: 2vw 3vw;
+        gap: 0;
+        font-size: 2vw;
+        border-bottom: 1px solid #ccc;
+        justify-content: left;
+    }
+
+    a {
+        display: flex;
+        text-decoration: none;
+        color: black;
+    }
+
+    /*Hamburguesa de arriba que despliega menu*/
+
+    .menutop {
+        position: relative;
+        display: inline-block;
+        margin-top: 1vw;
+    }
+
+    .menutop1 {
+        width: 6vw;
+    }
+
+    /* Ocultar que se muestre el checkbox */
+    .click {
+        display: none;
+    }
+
+    .menu_btn {
+        border: none;
+        padding: 12px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+    /* Contenido desplegable */
+    .menu_desplega {
+        display: none;
+        position: absolute;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        background: rgb(255, 255, 255);
+        min-width: max-content;
+        overflow: hidden;
+        top: 0%;
+        left: 100%;
+        opacity: 0;
+        width: 80vw;
+        margin: auto;
+    }
+
+    /* Cuando está seleccionado*/
+    .click:checked~.menu_desplega {
+        display: flex;
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    /* Enlaces dentro del menu */
+    .menu_desplega a {
+        display: block;
+        padding: 2vw 2vw;
+        text-decoration: none;
+    }
+
+    .iconsTopD {
+        width: 4.5vw;
+    }
+
+
+    .text {
+        display: none;
+    }
+
+    .account {
+        display: flex;
+        flex-direction: row;
+        width: 15vw;
+        margin: 0;
+        gap: 20vw;
+        justify-content: space-around;
+        margin-left: 55vw;
+    }
+
+    .blackicon {
+        width: 3vw;
+        height: 3vw;
+        margin: 2vw;
+    }
+
+    .pedro {
+        width: 7vw;
+        height: 7vw;
+        border-radius: 50%;
+        background-color: rgb(251, 99, 43);
+        padding: 0.3vw;
+    }
+
+    .panel {
+        font-size: 7vw;
+        margin: 7vw 0 1vw 0;
+    }
+
+
+    .block {
+        background-color: #f2f2f2;
+        margin: auto;
+        margin-top: 8vw;
+        width: 88vw;
+        height: 155vw;
+        border-radius: 6vw;
+        border-width: 2px;
+        border-style: solid;
+        border-color: #ff7221;
+    }
+
+    .item1 {
+        grid-column: 1/2;
+        text-align: left;
+        margin: auto;
+    }
+
+    .item2 {
+        grid-column: 2/3;
+        text-align: left;
+        margin: auto;
+    }
+
+    .item3 {
+        grid-column: 1/2;
+        grid-row: 2/4;
+        text-align: left;
+        margin: auto;
+    }
+
+    .item4 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        text-align: left;
+    }
+
+    .item5 {
+        grid-column: 2/3;
+        grid-row: 3/4;
+        text-align: left;
+        margin: auto;
+    }
+
+    .item6 {
+        grid-column: 1/3;
+        text-align: left;
+        margin: auto;
+    }
+
+
+    .titlesR {
+        font-size: 6vw;
+        text-align: left;
+        margin-left: 5vw;
+        margin-top: -1vw;
+    }
+
+    .titulo {
+        width: 45vw;
+        height: 8vw;
+        background-color: white;
+        border-radius: 10px;
+        color: #ffffffac;
+        font-size: 1.5vw;
+        font-weight: lighter;
+        border-radius: 3vw;
+        border-width: 2px;
+        border-style: solid;
+        border-color: rgb(176, 176, 176);
+        padding: 2vw;
+        align-content: center;
+        margin-left: 2vw;
+        margin-bottom: -2vw;
+        margin-top: -1vw;
+    }
+
+    .titlesF {
+        font-size: 6vw;
+        text-align: right;
+        margin-left: 0vw;
+        margin-top: -1vw;
+    }
+
+    .fecha {
+        width: 20vw;
+        height: 8vw;
+        background-color: white;
+        border-radius: 3vw;
+        color: #ffffffac;
+        font-size: 4vw;
+        font-weight: lighter;
+        border-width: 2px;
+        border-style: solid;
+        border-color: rgb(176, 176, 176);
+        padding: 1.5vw;
+        align-content: right;
+        margin-left: 2vw;
+        margin-bottom: -2vw;
+        margin-top: -1vw;
+    }
+
+    .titlesD {
+        font-size: 6vw;
+        text-align: left;
+        margin-left: 5vw;
+        margin-bottom: 0.5vw;
+    }
+
+    .descri {
+        width: 45vw;
+        height: 44vw;
+        background-color: white;
+        border-radius: 10px;
+        color: #ffffffac;
+        font-size: 1.5vw;
+        font-weight: lighter;
+        border-radius: 3vw;
+        border-width: 2px;
+        border-style: solid;
+        border-color: rgb(176, 176, 176);
+        padding: 2vw;
+        align-content: center;
+        margin-left: 2vw;
+        margin-bottom: -2vw;
+        margin-top: -1vw;
+    }
+
+    .titlesP {
+        font-size: 6vw;
+        text-align: right;
+        margin-right: 3vw;
+        margin-top: 3vw;
+    }
+
+    .flechaP {
+        width: 5vw;
+        background-color: white;
+        border-radius: 10px;
+        font-weight: lighter;
+        border-radius: 3vw;
+        border-width: 2px;
+        border-style: solid;
+        border-color: rgb(176, 176, 176);
+        padding: 3.8vw;
+        padding-left: 18vw;
+        margin-left: 2vw;
+        margin-bottom: -3vw;
+    }
+
+
+    .titlesA {
+        font-size: 6vw;
+        text-align: right;
+        margin-right: 3vw;
+        margin-top: 1vw;
+    }
+
+    .arrowLeft {
+        width: 5vw;
+        background-color: white;
+        border-radius: 10px;
+        font-weight: lighter;
+        border-radius: 3vw;
+        border-width: 2px;
+        border-style: solid;
+        border-color: rgb(176, 176, 176);
+        padding: 3.8vw;
+        padding-left: 18vw;
+        margin-left: 2vw;
+        margin-top: 1vw;
+    }
+
+    .titlesE {
+        font-size: 6vw;
+        text-align: left;
+        margin-left: -12vw;
+        margin-top: 1vw;
+    }
+
+    .media {
+        width: 14vw;
+        background-color: white;
+        padding-left: 21vw;
+        padding-right: 21vw;
+        padding-bottom: 15vw;
+        padding-top: 15vw;
+        border-radius: 3vw;
+        border-width: 2px;
+        border-style: solid;
+        border-color: rgb(176, 176, 176);
+        margin-left: 2vw;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .add_elements {
+        width: 40vw;
+        height: 10vw;
+        padding: 2vw;
+        background-color: rgb(246, 88, 30);
+        margin: auto;
+        border-radius: 30px;
+        font-size: 3vw;
+        color: white;
+        border: 0px;
+        margin-top: 5vw;
+        margin-bottom: 2vw;
+    }
 }
