--- a/src/styles/añadir.css
+++ b/src/styles/añadir.css
@@ -1,30 +1,84 @@
-header{
+header {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     justify-items: center;
-    align-items: center;
-    border-bottom: 1px solid;
-}
-
-header div{
-    display: flex;
-    gap: 5px;
-    width: 10%;
-    height: 10%;
-    margin-right: 0%;
-    margin-left: 6%;
-}
-
-.cuenta_opciones{
-    justify-content: right;
-    gap: 10%;
-}
-
-.Logo{
     justify-content: center;
-    justify-content: space-between;
-    align-items: center;
+    border-bottom: solid black 1px;
+    gap: 3vw;
+    font-weight: bold;
+    font-size: 1.2vw;
+}
+
+a{
+    display: flex;
+    text-decoration: none;
+    color: black;
+}
+.menutop {
+    display: none;
+}
+
+.add {
+    width: 10vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    padding-left: 8.5vw;
+}
+
+.account {
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+    width: 10vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.middle {
+    width: 2.5vw;
+    padding-left: 1vw;
+}
+
+.report {
+    width: 10vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    padding-left: 10vw;
+}
+
+.top {
+    width: 10vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+}
+
+.icons {
+    width: 2vw;
+}
+
+.text {
+    font-size: 1.2vw;
+    justify-items: center center;
+    margin: auto;
+    margin-left: 0.5vw;
+}
+
+.blackicon {
+    width: 1.2vw;
+    margin: 0.5vw;
+}
+
+.pedro {
+    width: 3vw;
+    background-color: orangered;
+    padding: 0.2vw;
+    border-radius: 50%;
 }
 
 .Titulo{
